# YATCP

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yml  docker_entrypoint.sh  file.txt  generate_tests.sh  known_issues.md  run_docker_local.sh  run_e2e_tests.sh
bugs/: bad_asm_generation.ytp  bad_integer_division_type_check.ytp  bad_opt.txt  bad_report.ytp  bad_tac_generation_for_function_in_conditional.txt  bad_type_conversion.ytp  cast_not_overriding_overflow_error_when_type_specified.ytp  cfg_generation_crashes_with_early_return.ytp  const_array_length_crash.ytp  const_cast_error_report_uses_wrong_span.ytp  const_ice_with_undeclared_identifier.ytp  ice_when_initializing_const_with_expression.ytp  missing_case_for_shifting.ytp  quicksort_with_bad_return_type_crashes.ytp
doc/: grammar  tokens
examples/: README.md  byte_array_and_write.ytp  compile.sh  factorial.txt  fibonacci.txt  fibonacci.ytp  fibonacci_dynamic.ytp  fibonacci_input.ytp  fizzbuzz.ytp  helper.c  insertion_sort.ytp  md5.ytp  quicksort.ytp  quicksort_slices.ytp  quicksort_with_custom_int_printing.ytp
src/: backend.rs  frontend.rs  lib.rs  main.rs  middleend.rs
tests/: arithmetic_compile.rs  cfg.rs  compiler_helper.rs  conditional_jump_conversion.rs  dead_store.rs  full_compile.rs  function_calls_compile.rs  if_statement_compile.rs  lexer.rs  merge_block.rs  parser.rs  semcheck.rs  tac_generator.rs  test_harness.rs  test_reporter.rs  while_loop_compile.rs
tests/test_runner/: Cargo.toml
tests/test_runner/src/: compiler_helper.rs  helper.rs  main.rs  test_harness.rs
vim/: README.md
(+807 files in other folders)
