[package]
name = "test_runner"
version = "0.1.0"
authors = ["Erkka Kääriä <erkka.kaaria@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
yaml-rust = "0.4.4"
rayon = "1.5.0"
regex = "1.3.9"
difference = "2.0.0"
